k8s/base/ingress.yaml
kind: Ingress
apiVersion: networking.k8s.io/v1

metadata:
  name: sentinel-ingress
  annotations:
    traefik.ingress.kubernetes.io/router.entrypoints: web

spec:
  rules:
    - http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: sentinelai-service
                port:
                  number: 80
